--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "prettier": "2.6.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
