--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "xstate": "^4.26.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
     "prettier": "2.6.2"
   },
   "scripts": {
