--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@xstate/react": "1.6.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-paginate": "^8.1.3",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
     "typescript": "^4.6.4",
